--- a/Backend/HealthLabApi/pom.xml
+++ b/Backend/HealthLabApi/pom.xml
@@ -66,6 +66,11 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.22</version>
+		</dependency>
 	</dependencies>
 
 	<build>
